--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -24,7 +25,6 @@
     "mongoose": "^8.15.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.10",
     "router": "^2.2.0"
   }
 }
